<resources>
    <string name="app_name">HomeVault</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="app_slogan">Your data. Your control.</string>
    <string name="click_back_again">Swipe/Tap back again to exit</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main3" translatable="false">Main3Activity</string>
    <string name="server_ip">Cloud Server IP or Domain</string>
    <string name="server_not_responding">The server address you entered doesn\'t exist or if it does - a compatible HomeVault installation cannot be found.</string>
    <string name="menu_files">Files</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_passwords">Passwords</string>
    <string name="menu_music">Music</string>
    <string name="administrator">Administrator</string>
    <string name="standard">Standard User</string>
    <string name="fetching_data">Fetching data from the cloud...</string>
    <string name="error_fetching_data">An error has occured while fetching data from the server</string>
    <string name="go_back">Go Back</string>
    <string name="create_file_or_folder">Create a folder/file</string>
    <string name="folder_name">New Folder name</string>
    <string name="create_folder_ok">Add folder</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="upload_file_dialog">Upload file</string>
    <string name="create_folder">Create a Folder</string>
    <string name="save_to_device">Save to device</string>
    <string name="move_file">Move</string>
    <string name="copy_file">Copy</string>
    <string name="delete_file">Delete</string>
    <string name="file_destination">File destination</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="action_backup">Backup</string>
    <string name="title_activity_backup">Backup</string>
    <string name="backup_all_photos">Enable auto-backup for all device photos</string>
    <string name="file_deletion_q">Are you sure you want to permanently delete the selected file from the server?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_settings">Settings</string>
    <string name="app_desc">An app made by Nicola Nicolov, participating on the Bulgarian National IT Olympiad. Designed to help you gain back control over your own data. Designed in Varna.</string>
    <string name="Logout">Sign out</string>
    <string name="app_foss">GPL v3 Open-source license (GitHub@nicolasmart)</string>
    <string name="gb_used" translatable="false">GB</string>
    <string name="gb_out_of">used of</string>
    <string name="backup_desc">This graphic shows you how much of your device storage is being used. By enabling auto backup, all of your photos will get automatically synced to your HomeVault account, after which you can delete the original copies from your phone to save space.</string>
    <string name="disable_backup">Disable auto-backup for new photos</string>
    <string name="rename">Rename</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
</resources>
