<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_storage"
            android:title="@string/menu_files" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_music_player"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/menu_notes" />
    </group>

</menu>
