<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="tk.homevault.main.ui.files.FilesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_files" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="tk.homevault.main.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_music_player"
        android:name="tk.homevault.main.ui.music_player.MusicPlayerFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_music_player" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="tk.homevault.main.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_passwords"
        android:name="tk.homevault.main.ui.passwords.PasswordsFragment"
        android:label="@string/menu_passwords"
        tools:layout="@layout/fragment_passwords" />
</navigation>